--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -11,20 +12,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.8",
-    "@angular/cdk": "^8.2.1",
+    "@angular/animations": "^8.2.12",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.2.8",
     "@angular/compiler": "~8.2.8",
     "@angular/core": "~8.2.8",
     "@angular/fire": "^5.2.1",
+    "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "~8.2.8",
     "@angular/material": "^8.2.1",
     "@angular/platform-browser": "~8.2.8",
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/router": "~8.2.8",
-    "firebase": "^7.0.0",
+    "angular-material": "^1.1.20",
+    "angularfire2": "^5.2.1",
+    "body-parser": "^1.19.0",
+    "boostrap": "^2.0.0",
+    "cors": "^2.8.5",
+    "ejs": "^2.7.2",
+    "express": "^4.17.1",
+    "firebase": "^4.6.1",
+    "mongojs": "^3.1.0",
+    "mongoose": "^5.7.10",
+    "mssql": "^6.0.1",
     "rxjs": "~6.4.0",
+    "tedious": "^6.6.2",
     "tslib": "^1.10.0",
+    "yarn": "^1.19.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -43,6 +57,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "nodemon": "^1.19.4",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
